551-tls/istio-api/bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
        nodePort: 30011
      hosts:
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
        nodePort: 30043
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: bookinfo-cert-secret
